--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Expensify</title>
+        <link rel="stylesheet" type="text/css" href="/styles.css"  />
         <base href="/">
     </head>
     <body>
         <div id="app"></div>
-        <!-- <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
-        <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script> -->
-
         <script src="bundle.js"></script>
     </body>
 </html>
